Imported src/books.js into index.html so that I could remove the require statements, since they were breaking the code in the client browser

--- a/public/index.html
+++ b/public/index.html
@@ -134,6 +134,7 @@
     <script src="./data/authors.js"></script>
     <script src="./data/books.js"></script>
     <script src="./setup.js"></script>
+    <script src="./src/books.js"></script>
     <script src="./src/home.js"></script>
     <script src="./renderers/home.js"></script>
   </body>
