--- a/public/index.html
+++ b/public/index.html
@@ -134,8 +134,7 @@
     <script src="./data/authors.js"></script>
     <script src="./data/books.js"></script>
     <script src="./setup.js"></script>
-    <script src="./src/books.js"></script>
-    <script src="./src/home.js"></script>
-    <script src="./renderers/home.js"></script>
+    <script src="homeBundle.js"></script>
+    <script src="homeRendererBundle.js"></script>
   </body>
 </html>
